-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 2.1.0.0-incubating
-
Component/s: Resource Manager
-
Labels:None
In yarn mode, when the host is not registered yet, RM will generate the following log message which makes log unable to read to identify which host is being processed.
2017-01-11 10:57:37.265071 GMT,,,p48567,th526657824,,,,0,con4,,seg-10000,,,,,"LOG","00000","Resource manager adjusts segment ~@ original global resource manager resource capacity from (188416 MB, 50 CORE) to (188416 MB, 46 CORE)",,,,,,,0,,"resourcepool.c",4700,
- links to