HAWQ-1285. resource manager outputs uninitialized string as host name