src/backend/resourcemanager/resourcepool.c
@@ -4697,10 +4697,10 @@ void adjustSegmentStatGRMCapacity(SegStat segstat)
 		if ( oldmemorymb != segstat->GRMTotalMemoryMB ||
 			 oldcore	 != segstat->GRMTotalCore )
 		{
-			elog(LOG, "Resource manager adjusts segment %s original global resource "
-					  "manager resource capacity from (%d MB, %d CORE) to "
-					  "(%d MB, %d CORE)",
-					  GET_SEGINFO_HOSTNAME(&(segstat->Info)),
+			elog(LOG, "Resource manager adjusts segment (GRM name) %s original "
+					  "global resource manager resource capacity from "
+					  "(%d MB, %d CORE) to (%d MB, %d CORE)",
+					  GET_SEGINFO_GRMHOSTNAME(&(segstat->Info)),
 					  oldmemorymb,
 					  oldcore,
 					  segstat->GRMTotalMemoryMB,
